# nur

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
src/: main.c  main.cpp  nur.h
src/servers/render/: render_server.cpp  render_server.h
